feat: pause monitor on next change.
